css/style.css
html {
    box-sizing: border-box;
}
*,
*::before,
*::after {
    box-sizing: border-box;
}
:root {
    font-size: 62.5%;
}
body {
    height: 100vh;
    background-color: white;
    margin: 0;
    text-align: center;
}
#homePg,
#outPg,
#spacePg {
    display: grid;
    height: 100vh;
    margin: 0;
}
#homePg {
    grid-template-columns: 1.3fr 0.2fr 0.7fr 1fr 1fr 0.7fr 0.2fr 1.3fr;
    grid-template-rows: 1fr 1fr 1fr 0.5fr 0.5fr 2.5fr 5fr 0.5fr 0.8fr 0.2fr 1fr;
    background-image: url('../images/homeimg.jpeg');
    background-size: cover;
}
.hm-pg-div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    padding: 1rem;
}
.rulesmess {
    grid-area: 2 / 2 / 10 / 8;
    display: flex;
    background-color: rgba(233, 196, 106, 0.5);
    color: black;
    border-radius: 1rem;
    margin: 0.5rem;
    z-index: 0;
    padding: 0.5rem;
    align-items: center;
}
.rulesmess > h3 {
    margin: 0.2rem;
    font-size: 1rem;
    line-height: font-size;
    flex: 1;
}
.rulesmess > h2 {
    margin: 0.2rem;
    font-size: 1.5rem;
    line-height: font-size;
    flex: 1;
}
.hmStats {
    color: white;
    font-size: 2rem;
    display: inline;
    text-shadow: black 0 0 0.5rem;
    font-weight: bold;
}
#hmHealth {
    grid-area: 1 / 1 / 2 / 2;
}
#hmMHlth {
    grid-area: 2 / 1 / 3 / 2;
}
#hmFood {
    grid-area: 2 / 8 / 3 / 9;
}
#hmTime {
    grid-area: 2 / 3 / 3 / 7;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    color: whitesmoke;
    text-shadow: black 0 0 0.5rem;
}
#hmMoney {
    grid-area: 1 / 8 / 2 / 9;
    font-size: 2rem;
}
#hmMeds {
    grid-area: 3 / 8 / 4 / 9;
}
#choices {
    display: none;
    grid-area: 5 / 3 / 8 / 7;
    background-color: #333333;
    border-radius: 1rem;
    color: whitesmoke;
    font-size: 3rem;
    padding: 1rem;
    align-items: center;
    justify-content: space-around;
}
#choices > h2 {
    line-height: auto;
    margin: 0.2rem;
    font-size: 3rem;
}
.chcbtn {
    display: flex;
    border-radius: 1rem;
    background-color: #2a9d8f;
    color: white;
}
.winlsdiv {
    grid-area: 6 / 2 / 7 / 8;
    display: none;
    flex-direction: column;
    align-items: center;
    background-color: rgba(244, 162, 97, 0.6);
    border-radius: 1rem;
    color: white;
    text-shadow: #E76F51 0 0 0.5rem;
    font-size: 3rem;
}
#hmOutDiv {
    grid-area: 10 / 6 / 12 / 9;
    justify-content: center;
    align-items: stretch;
    padding: 0;
}
#hmOutBtn {
    background-color: rgb(231, 111, 81);
    color: white;
    font-weight: bold;
    border-top-left-radius: 1rem;
    flex: 1;
}
#outPg {
    background-color: #555555;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: repeat(8, 1fr);
}
.outStats {
    color: whitesmoke;
    text-shadow: black 0 0 1.5rem;
    display: inline;
    padding-top: 2rem;
    font-weight: bolder;
    font-size: 2.7rem;
}
.outhlth {
    grid-area: 1 / 2 / 2 / 3;
    z-index: 0;
}
.outmhlth {
    grid-area: 1 / 3 / 2 / 4;
    z-index: 0;
}
.outmon {
    grid-area: 8 / 5 / 9 / 8;
    z-index: 0;
}
.outfd {
    grid-area: 1 / 9 / 2 / 10;
    z-index: 0;
}
.outmeds {
    grid-area: 1 / 10 / 2 / 11;
    z-index: 0;
}
.outtime {
    grid-area: 1 / 5 / 2 / 8;
    z-index: 0;
}
.st {
    background: url('../images/sttile.jpeg') no-repeat center center;
    display: flex;
    justify-content: center;
    align-items: center;
    color: whitesmoke;
    font-size: 4.5rem;
}
.s31 {grid-area: 3 / 1;}
.s32 {grid-area: 3 / 2;}
.s33 {grid-area: 3 / 3;}
.s71 {grid-area: 7 / 1;}
.s72 {grid-area: 7 / 2;}
.s73 {grid-area: 7 / 3;}
.s14 {grid-area: 1 / 4;}
.s24 {grid-area: 2 / 4;}
.s34 {grid-area: 3 / 4;}
.s44 {grid-area: 4 / 4;}
.s54 {grid-area: 5 / 4;}
.s64 {grid-area: 6 / 4;}
.s74 {grid-area: 7 / 4;}
.s84 {grid-area: 8 / 4;}
.s35 {grid-area: 3 / 5;}
.s36 {grid-area: 3 / 6;}
.s37 {grid-area: 3 / 7;}
.s75 {grid-area: 7 / 5;}
.s76 {grid-area: 7 / 6;}
.s77 {grid-area: 7 / 7;}
.s18 {grid-area: 1 / 8;}
.s28 {grid-area: 2 / 8;}
.s38 {grid-area: 3 / 8;}
.s48 {grid-area: 4 / 8;}
.s58 {grid-area: 5 / 8;}
.s68 {grid-area: 6 / 8;}
.s78 {grid-area: 7 / 8;}
.s79 {grid-area: 7 / 9;}
.s710 {grid-area: 7 / 10;}
.s111 {grid-area: 1 / 11;}
.s211 {grid-area: 2 / 11;}
.s311 {grid-area: 3 / 11;}
.s411 {grid-area: 4 / 11;}
.s511 {grid-area: 5 / 11;}
.s611 {grid-area: 6 / 11;}
.s711 {grid-area: 7 / 11;}
.s811 {grid-area: 8 / 11;}
.s312 {grid-area: 3 / 12;}
.s712 {grid-area: 7 / 12;}
.block {
    background: url('../images/block2.jpeg') repeat;
    display: flex;
}
.s41 {
    grid-area: 4 / 1 / 7 / 4;
    background: 
        url('../images/gcricon.svg'),
        url('../images/block2.jpeg');
    background-position: 
        top 0.7rem left 2.5rem,
        center;
    background-repeat: 
        no-repeat,
        repeat;
    background-size: 
        17%,
        auto;
    justify-content: flex-start;
    font-size: 4rem;
    color: white;
    text-shadow: 0 1rem 1rem black;
    padding: 1rem 4.5rem;
}
.s25 {grid-area: 1 / 5 / 3 / 8;}
.s47 {
    grid-area: 4 / 5 / 7 / 8;
    background: 
        url('../images/parkicon.svg'),
        url('../images/parkimg.jpeg');
    background-position: 
        top 0.7rem right 3rem,
        center;
    background-repeat: 
        no-repeat,
        repeat;
    background-size: 
        14%,
        cover;
    justify-content: flex-end;
    font-size: 4rem;
    color: white;
    text-shadow: 0 1rem 1rem black;
    padding: 1rem 4.2rem;
}
.s81 {
    grid-area: 8 / 1 / 9 / 4;
    background: 
        url('../images/pharmaicon.svg'),
        url('../images/block2.jpeg');
    background-position: 
        top 0.7rem left 3rem,
        center;
    background-repeat: 
        no-repeat,
        repeat;
    background-size: 
        14%,
        auto;
    font-size: 4rem;
    color: white;
    text-shadow: 0 1rem 1rem black;
    padding: 1rem 4.2rem;
}
.s29 {
    grid-area: 1 / 9 / 7 / 11;
    background: 
        url('../images/workicon.svg'),
        url('../images/block2.jpeg');
    background-position: 
        top 11.5rem left 0.7rem,
        center;
    background-repeat: 
        no-repeat,
        repeat;
    background-size: 
        30%,
        auto;
    font-size: 4rem;
    color: white;
    text-shadow: 0 1rem 1rem black;
    padding: 13rem 3rem;
}
.s810 {
    grid-area: 8 / 5 / 9 / 11;
    background: 
        url('../images/pharmaicon.svg'),
        url('../images/block2.jpeg');
    background-position: 
        top 0.7rem right 3rem,
        center;
    background-repeat: 
        no-repeat,
        repeat;
    background-size: 
        7%,
        auto;
    justify-content: flex-end;
    font-size: 4rem;
    color: white;
    text-shadow: 0 1rem 1rem black;
    padding: 1rem 4.4rem;
}
.s112 {
    grid-area: 1 / 12 / 3 / 13;
    background: 
        url('../images/gcricon.svg'),
        url('../images/block2.jpeg');
    background-position: 
        top 0.7rem left 0.7rem,
        center;
    background-repeat: 
        no-repeat,
        repeat;
    background-size: 
        55%,
        auto;
    justify-content: flex-start;
    font-size: 4rem;
    color: white;
    text-shadow: 0 1rem 1rem black;
    padding: 1rem 3rem;
}
#sUL {
    grid-area: 1 / 1 / 3 / 4;
    border-bottom-right-radius: 1rem;
}
#sCR {grid-area: 4 / 12 / 7 / 13;}
#sBR {grid-area: 8 / 12 / 9 / 13;}
#s25 {
    display: flex;
    align-items: flex-end;
    background: 
        url('../images/homeiglooicon.svg'),
        url('../images/block2.jpeg');
    background-position: 
        bottom left 0.7rem,
        center;
    background-repeat: 
        no-repeat,
        repeat;
    background-size: 
        30%,
        auto;
    font-size: 4rem;
    color: white;
    text-shadow: 0 1rem 1rem black;
    padding: 0.5rem 4.5rem;
}
.allbtnsdiv {
    grid-area: 1 / 1 / 9 / 13;
    display: grid;
    grid-template-columns: 1fr 0.3fr 4.6fr 0.3fr 1fr;
    grid-template-rows: 1fr 4fr 1fr;
    margin: 0;
}
.divbtn {
    background-color: rgba(200, 200, 200, 0.1);
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 5rem;
    color: rgba(2, 191, 15, 0.5);
    margin: 0;
    z-index: 1;
}
.rt {grid-area: 1 / 5 / 4 / 6;}
.lt {grid-area: 1 / 1 / 4 / 2;}
.up {
    grid-area: 1 / 2 / 2 / 5;
    margin: 0 1rem;
}
.dn {
    grid-area: 3 / 2 / 4 / 5;
    margin: 0 1rem;
}
.popupdiv {
    grid-area: 3 / 5 / 7 / 9;
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    padding: 2rem;
    background-color: rgba(42, 157, 143, 0.5);
    color: white;
    text-shadow: black 0 0 0.5rem;
    border-radius: 3rem;
}
.popupdiv > h2 {
    margin: 0.2rem;
    font-size: 3rem;
    line-height: font-size;
}
.popupdiv > div > h3 {
    margin: 0.2rem;
    font-size: 2.5rem;
    line-height: 4rem;
}
.ppuprsdiv {
    grid-area: 3 / 4 / 6 / 10;
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 2rem;
    background-color: rgba(168, 218, 220, 0.3);
    color: white;
    text-shadow: black 0 0 0.5rem;
    font-size: 2.5rem;
    border-radius: 3rem;
}
#spacePg {
    grid-template-columns: 1.3fr 0.2fr 0.7fr 1fr 1fr 0.7fr 0.2fr 1.3fr;
    grid-template-rows: 1fr 1fr 1fr 0.5fr 1fr 2fr 3fr 2.5fr 0.8fr 0.2fr 1fr;
    background-size: cover;
}
.spcpgd {
    color: whitesmoke;
    text-shadow: black 0 0 1.5rem;
    display: inline;
    padding-top: 2rem;
    font-weight: bolder;
    font-size: 2.7rem;
}
.spchlth {
    grid-area: 1 / 1 / 2 / 2;
}
.spcmhlth {
    grid-area: 2 / 1 / 3 / 2;
}
.spcfd {
    grid-area: 2 / 8 / 3 / 9;
}
.spctime {
    grid-area: 1 / 4 / 2 / 6;
}
.spcmon {
    grid-area: 1 / 8 / 2 / 9;
}
.spcmeds {
    grid-area: 3 / 8 / 4 / 9;
}
.spcinfo {
    grid-area: 4 / 2 / 7 / 8;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    background-color: rgba(50, 50, 50, 0.5);
    color: white;
    border-radius: 2rem;
    font-size: 2.5rem;
    padding: 2rem;
}
.spcpp {
    grid-area: 3 / 2 / 8 / 8;
    display: none;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    background-color: #222222;
    font-size: 2.5rem;
    background-color: rgba(50, 50, 50, 0.5);
    color: white;
    text-shadow: black 0 0 0.5rem;
    border-radius: 3rem;
}
.spcoutbtnd {
    grid-area: 10 / 7 / 12 / 9;
    display: flex;
}
#spcOutBtn {
    height: auto;
    border-top-left-radius: 1rem;
    background-color: #E76F51;
    color: white;
    font-size: 2rem;
    font-weight: bold;
    flex: 1;
}
.resetbtn {
    color: white;
    background-color: rgb(42, 157, 143);
    text-shadow: none;
}
#outPg,
#spacePg {
    display: none;
}

